<resources>
    <string name="app_name">PROBABILIDADES Y VALORES ESTADISTICOS</string>
    <string name="regresar">REGRESAR</string>
    <string name="sig">SIGUIETE</string>
    <string name="correct">CORRECTO :)</string>
    <string name="incorrect">INCORRECTO :(</string>

    <string name="LABEL">PROBABILIDADES</string>
    <string name="pregunta1">Si una bolsa contiene 2 bolas negras, 3 bolas blancas, 4 rojas y 5 bolas verdes. Se extrae una bola de la bolsa ¿Cuál es la probabilidad de que la bola sea de color rojo? </string>
    <string name="R11">6/7</string>
    <string name="R12">2/7</string>
    <string name="R13">8/7</string>


    <string name="Pregunta2">Se lanzan al aire tres monedas iguales. Calcula la probabilidad de que salgan dos caras y una cruz</string>
    <string name="R21">3/8</string>
    <string name="R22">2/4</string>
    <string name="R23">5/8</string>

    <string name="Pregunta3">"De los 39 alumnos de una clase, 16 escogieron francés y 27 inglés. Nueve alumnos eligieron ambos, y el resto no escogió ninguno de ellos. Si se elige al azar un alumno de dicha clase, ¿Cuál es la probabilidad de que elija ambos idiomas?.</string>
    <string name="R31">4/39</string>
    <string name="R32">35/39</string>
    <string name="R33">9/39</string>

    <string name="Pregunta4"> Se escuchan tres discos y se vuelven a guardar, al azar. ¿Cuál es la probabilidad de que al menos uno de los discos haya sido guardado en el envoltorio que le correspondía?</string>
    <string name="R41">2/3</string>
    <string name="R42">6/7</string>
    <string name="R43">1/3</string>

    <string name="Pregunta5">Se tienen cinco pares de guantes de distinto color. Entremezclamos bien los dos guantes. Extraemos dos de ellos al azar. ¿Cuál es la probabilidad de que ambos formen pareja?</string>
    <string name="R51">1/9</string>
    <string name="R52">2/3</string>
    <string name="R53">5/9</string>

    <string name="Pregunta6">Al lanzar dos dados ¿Cuál es la probabilidad de que el resultado de los dos dados no sea 7?</string>
    <string name="R61">1/6</string>
    <string name="R62">2/7</string>
    <string name="R63">5/6</string>

    <string name="Pregunta7">Determinar la probabilidad de que al extraer 2 cartas de una baraja, estas sean corazones.</string>
    <string name="R71">1/13</string>
    <string name="R72">1/17</string>
    <string name="R73">4/27</string>

    <string name="Pregunta8">Un artillero dispara a un blanco. Si la probabilidad de acertar un tiro es de 0.01 ¿Qué probabilidad tiene de no acertar?</string>
    <string name="R81">"0.99"</string>
    <string name="R82">"0.09"</string>
    <string name="R83">"0.9"</string>

    <string name="Pregunta9">En una caja hay 10 focos de los cuales 4 estan en buen estado, una persona toma la azar 3 focos. Hallar la probabilidad de que por lo menos uno este en buen estado</string>
    <string name="R91">"1/5"</string>
    <string name="R92">"1/6"</string>
    <string name="R93">"5/6"</string>

    <string name="Pregunta10">Sabiendo que la probabilidad de que ocurra un accidente en un 1Km de una carretera es de 1/3 ¿Cuál es la probabilidad de que ocurra encontrar al menos un accidente en 3Km de esa carretera?</string>
    <string name="R101">"1/27"</string>
    <string name="R102">"19/27"</string>
    <string name="R103">"2/3"</string>


    <string name="PV1">Calcular la media de los siguientes datos: 11, 6, 7, 7, 4. </string>
    <string name="V11">7</string>
    <string name="v12">8</string>
    <string name="v13">5</string>


    <string name="PV2">Las edades de 8 niños que van a una fiesta son: 2, 2, 3, 5, 7, 7, 9, 10. Hallar la edad media:</string>
    <string name="V21">5</string>
    <string name="V22">5.6</string>
    <string name="V23">5.20</string>

    <string name="PV3">Calcular la mediana de los siguientes datos: 11, 6, 7, 7, 4.</string>
    <string name="V31">7</string>
    <string name="V32">9</string>
    <string name="V33">6</string>

    <string name="PV4"> Calcular la mediana de los siguientes datos: 3, 6, 7, 9, 4, 4.</string>
    <string name="V41">4</string>
    <string name="V42">6</string>
    <string name="V43">5</string>

    <string name="PV5">Se tienen cinco pares de guantes de distinto color. Entremezclamos bien los dos guantes. Extraemos dos de ellos al azar. ¿Cuál es la probabilidad de que ambos formen pareja?</string>
    <string name="V51">1/9</string>
    <string name="V52">2/3</string>
    <string name="V53">5/9</string>

    <string name="PV6">Al lanzar dos dados ¿Cuál es la probabilidad de que el resultado de los dos dados no sea 7?</string>
    <string name="V61">1/6</string>
    <string name="V62">2/7</string>
    <string name="V63">5/6</string>

    <string name="PV7">Determinar la probabilidad de que al extraer 2 cartas de una baraja, estas sean corazones.</string>
    <string name="V71">1/13</string>
    <string name="V72">1/17</string>
    <string name="V73">4/27</string>

    <string name="PV8">Un artillero dispara a un blanco. Si la probabilidad de acertar un tiro es de 0.01 ¿Qué probabilidad tiene de no acertar?</string>
    <string name="V81">"0.99"</string>
    <string name="V82">"0.09"</string>
    <string name="V83">"0.9"</string>

    <string name="PV9">En una caja hay 10 focos de los cuales 4 estan en buen estado, una persona toma la azar 3 focos. Hallar la probabilidad de que por lo menos uno este en buen estado</string>
    <string name="V91">"1/5"</string>
    <string name="V92">"1/6"</string>
    <string name="V93">"5/6"</string>

    <string name="PV10">Sabiendo que la probabilidad de que ocurra un accidente en un 1Km de una carretera es de 1/3 ¿Cuál es la probabilidad de que ocurra encontrar al menos un accidente en 3Km de esa carretera?</string>
    <string name="V101">"1/27"</string>
    <string name="V102">"19/27"</string>
    <string name="V103">"2/3"</string>


    <string name="tituloValoresEst">Valores Estadisticos</string>
    <string name="btnMedDesv">"Media y Varianza "</string>
    <string name="btnDisNor">Distribucion Normal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tituloDistNormal">Distribucion Normal</string>
    <string name="btnRegresar">Regresar</string>
    <string name="hintMedia">Media</string>
    <string name="btnCalcular">Calcular</string>
    <string name="hintDesvEst">Desviacion Estandar</string>
    <string name="rBtnSing">Una sola variable</string>
    <string name="rBtnEnt">Entre dos variables</string>
    <string name="hintXUno">X1</string>
    <string name="hintXDos">X2</string>
    <string name="resultado">Resultado</string>
    <string name="nop">Calculadora de Media y Varianza</string>
    <string name="tituloMedVar">Media y Varianza</string>
    <string name="infoValorX">Ingrese valor de X</string>
    <string name="infoValorFx">Ingrese valor de f(x)</string>
    <string name="valorX">Valor X</string>
    <string name="valorFx">Valor f(x)</string>
    <string name="btnGuardar">Guardar</string>
    <string name="cantDatos">Tamaño de las tablas</string>
    <string name="resulMedia">Resultado de Media</string>
    <string name="resultVar">Resultado Varianza</string>
    <string name="fragMenuVe">Menu Valores Estadisticos</string>
    <string name="mediaVarianza">Media y Varianza</string>


</resources>