<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MedVarFragment"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloMedVar"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnRegresarMv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegresar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/infoValorX"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/infoValorFx"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTxtValorX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/valorX"
            android:inputType="numberDecimal"
            android:minHeight="55dp" />

        <EditText
            android:id="@+id/editTxtValorFx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/valorFx"
            android:inputType="numberDecimal"
            android:minHeight="55dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnGuardarMv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnGuardar" />

        <TextView
            android:id="@+id/txtViewSizes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cantDatos"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnCalcularMv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCalcular" />

        <TextView
            android:id="@+id/txtViewMedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resulMedia"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtViewVarianza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultVar"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>