<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DistNormalFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7E90F8"
        android:text="@string/tituloDistNormal"
        android:textAlignment="center"
        android:textSize="34sp" />

    <Button
        android:id="@+id/btnRegresar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegresar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTxtMedia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hintMedia"
            android:inputType="numberDecimal"
            android:minHeight="55dp"
            android:textColorHint="@color/material_on_background_emphasis_high_type" />

        <Button
            android:id="@+id/btnCalcularDN"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:text="@string/btnCalcular" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTxtDesvEstn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/hintDesvEst"
            android:inputType="numberDecimal"
            android:minHeight="55dp"
            android:textColorHint="@color/material_on_background_emphasis_high_type"
            android:autofillHints="" />

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radBtnSing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:text="@string/rBtnSing" />

        <RadioButton
            android:id="@+id/radBtnEnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-50dp"
            android:layout_weight="1"
            android:text="@string/rBtnEnt"
            android:translationX="240dp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/editTxtValorX1"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hintXUno"
            android:inputType="numberDecimal"
            android:minHeight="55dp" />

        <EditText
            android:id="@+id/editTxtValorX2"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hintXDos"
            android:inputType="numberDecimal"
            android:minHeight="55dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtViewRst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textSize="24sp" />

</LinearLayout>