<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Probabilidades">

    <RadioGroup
        android:layout_width="393dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702">

        <RadioButton
            android:id="@+id/rbtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/R11" />

        <RadioButton
            android:id="@+id/rbtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/R12" />

        <RadioButton
            android:id="@+id/rbtn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/R13" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LABEL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/Indicep"
        android:layout_width="233dp"
        android:layout_height="57dp"
        android:layout_marginTop="80dp"
        android:text="1 de 10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pregunta"
        android:layout_width="382dp"
        android:layout_height="156dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="148dp"
        android:text="@string/pregunta1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/terminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="salir"
        android:text="@string/regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

    <Button
        android:id="@+id/SIG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="44dp"
        android:onClick="Siguiente"
        android:text="@string/sig"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>