<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ValoresEstadisticos"
    android:background="@drawable/animation"
    android:id="@+id/mainLayout">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tituloValoresEst"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="43dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <Button
            android:id="@+id/btnMedVar"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/btnMedDesv"
            android:background="@drawable/button"
            android:fontFamily="sans-serif-smallcaps"/>

        <Button
            android:id="@+id/btnDistNor"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/btnDisNor" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.example.probabilidadesvestad.DefaultxFragment"
        android:layout_width="387dp"
        android:layout_height="574dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>